fix: Ask component body does not vertically scroll on overflow

--- a/plugins/plugin-codeflare/web/scss/components/Ask/_index.scss
+++ b/plugins/plugin-codeflare/web/scss/components/Ask/_index.scss
@@ -46,7 +46,6 @@ $max-width: 50rem;
 }
 
 @include Ask {
-  &,
   .pf-c-card {
     width: $max-width;
     min-width: 0;
